# UZKAD-WFS-SHP-Downloader-Desktop-Application

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  arcgis_client.py  collector.py  config.py  database.py  downloader.py  exporter.py  grid_generator.py  job_manager.py  logging_setup.py  main.py  models.py  regions.py  session.py  wfs_client.py
backend/tests/: test_pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.ts  preload.ts  tsconfig.json
frontend/src/: App.tsx  api.ts  global.d.ts  styles.css  types.ts
frontend/src/components/: CollectorPanel.tsx  LoginPanel.tsx  MapPanel.tsx  ProgressPanel.tsx  SessionBadge.tsx
