[project]
name = "uzkad-wfs-downloader"
version = "1.0.0"
description = "Backend for the UZKAD WFS SHP Downloader desktop application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "requests>=2.32",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pyogrio>=0.9",
    "fiona>=1.9",
    "pandas>=2.2",
]

[project.scripts]
uzkad-backend = "app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
